Fixed names disappearing sometimes and fixed movement again and fixed name displaying on ios

--- a/fgWebCode/webIOS.css
+++ b/fgWebCode/webIOS.css
@@ -75,7 +75,7 @@
     font-weight:400;
     font-size:2dvh;
     left:50%;
-    top:0;
+    bottom:100%;
     transform:translateX(-50%);
 }
 
