--- a/fgWebCode/webLaptop.css
+++ b/fgWebCode/webLaptop.css
@@ -63,7 +63,8 @@
     font-weight:400;
     font-size:2dvh;
     left:50%;
-    top:0;
+    bottom:100%;
+    width:100%;
     transform:translateX(-50%);
 }
 
